--- a/kafka-test-ali/configure/persistent-vol-kafka-node-1.yml
+++ b/kafka-test-ali/configure/persistent-vol-kafka-node-1.yml
@@ -1,17 +1,16 @@
 apiVersion: v1
 kind: PersistentVolume
 metadata:
-  name: kafka-pv1
-  namespace: kafka
+  name: local-pv-node01-kafka-0
 spec:
   capacity:
-    storage: 1Gi
+    storage: 2Gi
   accessModes:
   - ReadWriteOnce
   persistentVolumeReclaimPolicy: Retain
-  storageClassName: local-storage-kafka
+  storageClassName: kafka-local
   local:
-    path: /data/node01/kafka-pv1
+    path: /data/kafka/node01/kafka-0
   nodeAffinity:
     required:
       nodeSelectorTerms:
@@ -24,17 +23,16 @@ spec:
 apiVersion: v1
 kind: PersistentVolume
 metadata:
-  name: kafka-pv2
-  namespace: kafka
+  name: local-pv-node01-kafka-1
 spec:
   capacity:
-    storage: 1Gi
+    storage: 2Gi
   accessModes:
   - ReadWriteOnce
   persistentVolumeReclaimPolicy: Retain
-  storageClassName: local-storage-kafka
+  storageClassName: kafka-local
   local:
-    path: /data/node01/kafka-pv2
+    path: /data/kafka/node01/kafka-1
   nodeAffinity:
     required:
       nodeSelectorTerms:
@@ -47,17 +45,16 @@ spec:
 apiVersion: v1
 kind: PersistentVolume
 metadata:
-  name: kafka-pv3
-  namespace: kafka
+  name: local-pv-node01-kafka-2
 spec:
   capacity:
-    storage: 1Gi
+    storage: 2Gi
   accessModes:
   - ReadWriteOnce
   persistentVolumeReclaimPolicy: Retain
-  storageClassName: local-storage-kafka
+  storageClassName: kafka-local
   local:
-    path: /data/node01/kafka-pv3
+    path: /data/kafka/node01/kafka-2
   nodeAffinity:
     required:
       nodeSelectorTerms:
@@ -67,4 +64,68 @@ spec:
           values:
           - node01
 ---
-
+apiVersion: v1
+kind: PersistentVolume
+metadata:
+  name: local-pv-node01-kafka-3
+spec:
+  capacity:
+    storage: 2Gi
+  accessModes:
+  - ReadWriteOnce
+  persistentVolumeReclaimPolicy: Retain
+  storageClassName: kafka-local
+  local:
+    path: /data/kafka/node01/kafka-3
+  nodeAffinity:
+    required:
+      nodeSelectorTerms:
+      - matchExpressions:
+        - key: kubernetes.io/hostname
+          operator: In
+          values:
+          - node01
+---
+apiVersion: v1
+kind: PersistentVolume
+metadata:
+  name: local-pv-node02-kafka-1
+spec:
+  capacity:
+    storage: 2Gi
+  accessModes:
+  - ReadWriteOnce
+  persistentVolumeReclaimPolicy: Retain
+  storageClassName: kafka-local
+  local:
+    path: /data/kafka/node02/kafka-1
+  nodeAffinity:
+    required:
+      nodeSelectorTerms:
+      - matchExpressions:
+        - key: kubernetes.io/hostname
+          operator: In
+          values:
+          - node02
+---
+apiVersion: v1
+kind: PersistentVolume
+metadata:
+  name: local-pv-node02-kafka-2
+spec:
+  capacity:
+    storage: 2Gi
+  accessModes:
+  - ReadWriteOnce
+  persistentVolumeReclaimPolicy: Retain
+  storageClassName: kafka-local
+  local:
+    path: /data/kafka/node02/kafka-2
+  nodeAffinity:
+    required:
+      nodeSelectorTerms:
+      - matchExpressions:
+        - key: kubernetes.io/hostname
+          operator: In
+          values:
+          - node02
